--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "javascript",
     "webpack"
   ],
-  "author": "Vladilen <v@mail.ru>",
+  "author": "Danil",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.11.6",
